# AutoCalc

./: .gitignore  CMakeLists.txt  Makefile  README.md  ReadMe.md  notes.aux  notes.out  notes.tex.bak  notes.toc  results_mnist.txt  results_resnet.json  results_resnet.txt  variable.cpp
ag/: __init__.py
benchmarks/: ResNet_MNIST.py  SimpleNet_MNIST.py
bindings/: data.cpp  nn.cpp  variable.cpp
build-fast/: mnist_demo
c_tests/: test_data_dataloader.cpp  test_data_dataloader_additional.cpp  test_data_dataloader_bindings.cpp  test_linalg_matmul.cpp  test_main.cpp  test_nn_batchnorm2d.cpp  test_nn_conv2d.cpp  test_nn_linear.cpp  test_nn_loss_cross_entropy.cpp  test_nn_module_linear_regression.cpp  test_nn_module_sgd_spiral_multiclass.cpp  test_nn_module_sgd_xor.cpp  test_nn_sgd.cpp  test_ops_activations.cpp  test_ops_cat_upsample.cpp  test_ops_stats.cpp  test_parallel.cpp  test_parallel_pool.cpp
debug/: lstm_debug.cpp
examples/: ResNet_demo.cpp  lstm_shakespeare.cpp  mnist_demo.cpp  playing_around.py
include/ag/: all.hpp
include/ag/core/: implicit_qp.hpp  parallel.hpp  rng.hpp  stochastic.hpp  tensor_utils.hpp  variables.hpp
include/ag/data/: dataloader.hpp  dataset.hpp  transforms.hpp
include/ag/nn/: dropout.hpp  loss.hpp  module.hpp  normalization.hpp  sequential.hpp
include/ag/nn/layers/: conv2d.hpp  dropout.hpp  linear.hpp  lstm.hpp  normalization.hpp  pooling.hpp  upsample.hpp
include/ag/nn/optim/: sgd.hpp
include/ag/ops/: activations.hpp  cat.hpp  elementwise.hpp  gemm.hpp  graph.hpp  linalg.hpp  reduce.hpp  reshape.hpp  rng_extras.hpp  stats.hpp  tensor_utils.hpp  transpose.hpp
include/ag/parallel/: bench.hpp  config.hpp  parallel_for.hpp  per_thread.hpp  pool.hpp  transform.hpp
include/ag/sys/: hw.hpp
parallel_sanity/: sanity_pool.cpp
proto/: engine.proto
py_demos/: ResNet_MNIST.py
pytests/: conftest.py  main.py  stress_dataloader.py
pytests/test/: test_bindings_smoke.py  test_data_api.py  test_data_dataloader_more.py  test_data_dataloader_py.py  test_data_mnist_local_py.py  test_memory_leak.py  test_milestone1_ops.py  test_mini_unet.py  test_nn_grueling.py  test_nn_linear_regression_py.py  test_nn_lstm_py.py  test_nn_pooling_py.py  test_resnet_mnist_py.py  test_resnet_python_module.py  test_sgd_momentum_nesterov.py  test_sgd_numeric_update.py  test_simplenet_ce_py.py  test_simplenet_py.py  test_slice.py  test_transpose.py
python/: api.py
results/resnet_demo/2026-02-20_145301/: params.txt  results.json
results/resnet_demo/2026-02-20_174535/: params.txt  results.json
src/: forward_variable.cpp  implicit_qp.cpp  matrix.c  matrix.cpp  matrix.h  matrix.hpp  mynp.cpp  ops_elmwise.cpp  ops_linalg.cpp  stochastic.cpp  tensor.cpp  tensor.hpp  tensor_utils.cpp  test.cpp  variable.cpp  variable.hpp  variables.hpp
src/ag/core/: implicit_qp.cpp  ops_elmwise.cpp  ops_linalg.cpp  stochastic.cpp  tensor_utils.cpp  variable.cpp
src/ag/nn/: dropout.cpp  loss.cpp  module.cpp  normalization.cpp
src/ag/nn/layers/: conv2d.cpp  dropout.cpp  linear.cpp  lstm.cpp  normalization.cpp  pooling.cpp  upsample.cpp
src/ag/nn/optim/: sgd.cpp
src/ag/ops/: activations.cpp  cat.cpp  graph.cpp  ops_elmwise.cpp  ops_linalg.cpp  ops_slice.cpp  reduce.cpp  reshape.cpp  rng_extras.cpp  stats.cpp  tensor_utils.cpp
src/ag/sys/: hw.cpp
tests/: test_data_dataloader.cpp  test_data_dataloader_batch_size_guard.cpp  test_data_dataloader_bindings.cpp  test_data_dataloader_parallel_stress.cpp  test_framework.hpp  test_implicit_qp.cpp  test_linalg_matmul.cpp  test_lstm_complete.cpp  test_main.cpp  test_nn_batchnorm2d.cpp  test_nn_ce_parallel_consistency.cpp  test_nn_conv2d.cpp  test_nn_dropout.cpp  test_nn_linear.cpp  test_nn_loss_cross_entropy.cpp  test_nn_lstm.cpp  test_nn_module_sgd_convergence.cpp  test_nn_module_sgd_resnet_linear.cpp  test_nn_module_sgd_spiral_multiclass.cpp  test_nn_pooling.cpp  test_nn_sequential.cpp  test_nn_sgd.cpp  test_ops_activations.cpp  test_ops_gemm.cpp  test_ops_matmult_parallel_consistency.cpp  test_ops_reshape.cpp  test_ops_stats.cpp  test_ops_transpose.cpp  test_optim_sgd.cpp  test_parallel.cpp  test_parallel_per_thread.cpp  test_qp_rigorous.cpp  test_stochastic.cpp  test_variable_basic.cpp  variable_sanity.cpp
